--- a/templates/listProblemList.vm
+++ b/templates/listProblemList.vm
@@ -1,15 +1,19 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
 <thead></thead><tbody>
-#if ($problem)
-	#foreach(  $problemDetail in $problem )
+#if ($problems)
+	#foreach ($repos in $problems)
+		#if ($repos.problem)
+			#foreach(  $problemDetail in $repos.problem )
 	   <tr>
-	  	<td>$problemDetail.problemName</td>
+	  	<td> $problemDetail.problemName </td>
 		<td>
 		<div class="ui-corner-all" id="detail">
-		$problemDetail.problemDate.low.month/$problemDetail.problemDate.low.day/$problemDetail.problemDate.low.year
+			${problemDetail.problemDate.low.month}/${problemDetail.problemDate.low.day}/${problemDetail.problemDate.low.year}
 		</div></td> 
 	   	</tr>
+	   	#end
+	   #end
 	#end
 #end
 </tbody>
-<table>
+</table>
